--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "8.56.0",
+		"@types/jsdom": "^21.1.6",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"eslint": "^8.56.0",
@@ -36,6 +37,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"jsdom": "^24.0.0",
 		"sass": "^1.70.0",
 		"svelte-preprocess": "^5.1.3"
 	}
